Commit to repository

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container cont">
         <div class="row">
           <div class="col-xs-12 font-helvet">
-            <p>Here is an example about an epic battle with images with pharallax</p>
+            <p>Here is an example about an epic battle with images with parallax</p>
             <br>
           </div>
         </div>
